--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://lokakoden.se/pet_the_dog"
 }
